# PredictingProteinInteractions

./: .gitignore  License  README.md  Readme  mkdocs.yml
MetricGeometry/: Experimental.R  (+3 more)
MetricGeometry/RepeatedSubsampling/FirstLowerBoundRelationOfPosAndNeg/: .cproject  .project  CMakeLists.txt  example  gmon.out  histOfMeasures.R  makefile  profile.sh
MetricGeometry/RepeatedSubsampling/FirstLowerBoundRelationOfPosAndNeg/.metadata/: version.ini
MetricGeometry/RepeatedSubsampling/FirstLowerBoundRelationOfPosAndNeg/Example/: EMD_1000_100_10.0000_1_1.0000_1.0000_1.0000_id_test.csv  EMD_1000_100_3.0000_1_1.0000_1.0000_1.0000_id_test.csv  EMD_100_10000_5.0000_1_1.0000_1.0000_1.0000.csv  EMD_100_1000_5.0000_1_1.0000_0.0000_0.0000.csv  EMD_100_1000_5.0000_1_1.0000_1.0000_1.0000.csv  EMD_100_1000_5.0000_1_1.0000_1.0000_1.0000_id_test.csv  EMD_100_100_0.0050_1_1.0000_0.8600_0.3800_id_test.csv  EMD_100_100_1.0000_1_1.0000_1.0000_1.0000_id_test.csv  EMD_100_100_1.5000_1_1.0000_1.0000_1.0000_id_test.csv  EMD_100_100_2.5000_1_1.0000_1.0000_1.0000_id_test.csv  EMD_100_100_2000.0000_1_1.0000_1.0000_1.0000_id_test.csv  EMD_100_100_3.0000_1_1.0000_1.0000_1.0000_id_test.csv  EMD_100_100_5.0000_1_1.0000_0.0000_0.0000.csv  EMD_100_100_5.0000_1_1.0000_1.0000_1.0000.csv  EMD_100_100_5.0000_1_1.0000_1.0000_1.0000_id_test.csv  EMD_100_10_1.0000_1_1.0000_1.0000_1.0000_id_test.csv  EMD_100_10_3.0000_1_1.0000_1.0000_1.0000_id_test.csv  EMD_100_10_5.0000_1_1.0000_1.0000_1.0000_id_test.csv  EMD_100_200_5.0000_1_1.0000_1.0000_1.0000_id_test.csv  EMD_100_50000_5.0000_1_1.0000_0.0000_0.0000.csv  (+729 more)
(+109 files in other folders)
